--- a/requirements.txt
+++ b/requirements.txt
@@ -96,7 +96,7 @@ python-dateutil==2.8.2
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
 # pywin32==304
-pywinpty==2.0.5
+# pywinpty==2.0.5
 pyzmq==23.1.0
 qtconsole==5.3.1
 QtPy==2.1.0
